Migrated to Spring Boot 3