@@ -1,23 +1,19 @@
 package io.eventuate.examples.tram.sagas.ordersandcustomers.apigateway.proxies;
 
-import org.junit.Assert;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
 import org.springframework.boot.autoconfigure.EnableAutoConfiguration;
 import org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.web.server.LocalServerPort;
+import org.springframework.boot.test.web.server.LocalServerPort;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Import;
-import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
 
 import java.io.IOException;
 import java.net.HttpURLConnection;
 import java.net.URL;
 
-@RunWith(SpringJUnit4ClassRunner.class)
-@SpringBootTest(classes = SwaggerUiTest.Config.class,
-        webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
+@SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
 public class SwaggerUiTest {
 
   @LocalServerPort
@@ -36,14 +32,19 @@ public class SwaggerUiTest {
     testSwaggerUiUrl(port);
   }
 
+  @Test
+  public void testSwaggerYml() throws IOException {
+    assertUrlStatusIsOk("http://%s:%s/swagger/swagger.yml".formatted(hostName, port));
+  }
+
   private void testSwaggerUiUrl(int port) throws IOException {
-    assertUrlStatusIsOk(String.format("http://%s:%s/swagger-ui/index.html", hostName, port));
+    assertUrlStatusIsOk("http://%s:%s/swagger-ui/index.html".formatted(hostName, port));
   }
 
   private void assertUrlStatusIsOk(String url) throws IOException {
     HttpURLConnection connection = (HttpURLConnection) new URL(url).openConnection();
     if (connection.getResponseCode() != 200)
-      Assert.fail(String.format("Expected 200 for %s, got %s", url, connection.getResponseCode()));
+      Assertions.fail("Expected 200 for %s, got %s".formatted(url, connection.getResponseCode()));
   }
 
 
